--- a/mystyle.css
+++ b/mystyle.css
@@ -23,61 +23,60 @@ h1 {
   text-align: center;
 }
 
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.navbar {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-family: Open sans-serif;
+  text-transform: capitalize !important;
 }
 
-li {
+.navbar * {
+  box-sizing: border-box;
+  transition: all .30s ease;
+}
+
+.navbar a {
+  padding: .5em .8em;
+  color: rgba(255,255,255,.5);
   position: relative;
-  padding-left: 30px;
-  height: 50px;
-  line-height: 50px;
-  margin: 5px;
-  border: 1px solid #aaa;
-  border-radius: 8px;
-  width: 200px;
-  background: #bdb0b0;
-  cursor: pointer;
-  color: blue;
-  box-shadow: 2px 2px 3px #666;
-  user-select: none;
+  text-decoration: none;
+  font-size: 20px;
 }
 
-li:before {
+.navbar a::before,
+.navbar a::after {
+  content: '';
+  height: 12px;
+  width: 12px;
   position: absolute;
-  content: "";
-  left: 4px;
-  top: 50%;
-  margin-top: -10px;
-  color: blue;
-  border-left: 20px solid #ccc;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+  transition: all .35s ease;
+  opacity: 0;
 }
 
-li:after {
-  position: absolute;
-  content: "";
-  left: 4px;
-  top: 50%;
-  color: blue;
-  margin-top: -10px;
-  border-left: 5px solid white;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+.navbar a::before {
+  content: '';
+  right: 0;
+  top: 0;
+  border-top: 3px solid #3E8914;
+  border-right: 3px solid #2E640F;
+  transform: translate(-100%, 50%);
 }
 
-li:hover {
-  border-color: #777;
-  box-shadow: 3px 3px 5px #333;
+.navbar a:after {
+  content: '';
+  left: 0;
+  bottom: 0;
+  border-bottom: 3px solid #2E640F;
+  border-left: 3px solid #3E8914;
+  transform: translate(100%, -50%)
 }
 
-li:hover:before {
-  border-left-color: #777;
+.navbar a:hover:before,
+.navbar a:hover:after{
+  transform: translate(0,0);
+  opacity: 1;
 }
 
-li:active {
-  box-shadow: inset 0 1px 1px #666;
+.navbar a:hover {
+  color: #3e9af0;
 }
