--- a/about.css
+++ b/about.css
@@ -1,11 +1,3 @@
-algo_list {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
   
   .custom {
     width: 275px !important;
@@ -92,3 +84,6 @@ algo_list {
     color: #3e9af0;
   }
   
+  #points{
+    width: 30%;
+  }
